# life-rust

./: .gitignore  Cargo.toml  README.md
benches/: cpu_game_benchmark.rs  game_benchmarks.rs
src/: game_impls.rs  lib.rs  main.rs
src/game_impls/: compute.rs  cpu.rs  cpu_ndarray.rs
