[package]
name = "life-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ndarray = "0.15"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "game_benchmarks"
harness = false

[profile.bench]
debug = 1
lto = "fat"